--- a/e-commerce-smartwatch/src/pages/register/register.css
+++ b/e-commerce-smartwatch/src/pages/register/register.css
@@ -3,47 +3,47 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: linear-gradient( 
+    background: linear-gradient(
       rgba(255, 255, 255, 0.6),
       rgba(255, 255, 255, 0.3)
     ),
-    url('https://images.unsplash.com/photo-1468581264429-2548ef9eb732?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80');
-  
+    url('../../img/backgound/wallpaper4.jpg');
+
     background-size: cover;
     background-position: center;
   }
-  
+
   .form {
     flex-direction: column;
     background-color: white;
     padding: 0px 60px;
     border-radius: 10px;
   }
-  
+
   .formElements {
     display: flex;
     flex-direction: row;
     gap: 20px;
   }
-  
+
   .registration h1 {
     color: #1f1f1f;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 10px;
   }
-  
+
   .userType{
     display: flex;
     flex-direction: column;
-  
+
   }
-  
+
   .registration label{
     font-size: 12px;
     color: gray;
   }
-  
+
   .registration select {
     padding: 15px;
     margin: 5px 0px;
@@ -53,7 +53,7 @@
     background-color: white;
     cursor: pointer;
   }
-  
+
   .registration button {
     width: 100%;
     height: 50px;
